# dissertation

./: .RDataTmp  .gitignore  LICENSE  PDSV_Results.qmd  README.html  README.md  S1_EDA.qmd  aggregate_results.Rmd  batch_process.R  dissertation.Rproj  generate_single_subject_variables.Rmd  import_data.py  lmer_simulation.qmd  pdvs_v3d.Rproj  power_analysis.Rmd  power_analysis_draft.Rmd  power_analysis_simulation.R  primary_analysis.Rmd  process_single_subject.Rmd  processing_v3d_in_R.Rmd  pyproject.toml  quasi_stiffness_analysis.Rmd  roll_up_python_output.qmd  slr_summary_table.html  stage_3.qmd  subject_data.csv  subject_data.xlsx  tidy_v3d.R  tsv_to_tidy.py  v3d_import.py  v3d_to_tidy.R
data/: S10_step_lengths.csv  S11_step_lengths.csv  S13_step_lengths.csv  S14_step_lengths.csv  S15_step_lengths.csv  S18_step_lengths.csv  S3_step_lengths.csv  S6_step_lengths.csv  S7_step_lengths.csv
data_processing/: batch_process.R  generate_single_subject_variables.Rmd  tidy_v3d.R
manuscripts/: README.md  bil_PDSV.qmd  bilateral_PDSV.docx  dissertation.Rproj  uni_PDSV.qmd
manuscripts/figures/: figures.pptx
manuscripts/working/: Bilateral PDSV.docx  Bilateral_PDSV.md  Unilateral PDSV.docx  (+2 more)
power_analysis/: power_analysis_simulation.R
scripts/: bilateral_PDSV.Rmd  participant_stats.Rmd  quality_checks.Rmd  unilateral_PDSV.Rmd
tidy_output/: S12_step_lengths.csv  S16_step_lengths.csv  S17_step_lengths.csv  S19_step_lengths.csv  S20_step_lengths.csv  S2_step_lengths.csv  S4_step_lengths.csv  S5_step_lengths.csv  S8_step_lengths.csv  S9_step_lengths.csv  s1_step_lengths.csv
(+4 files in other folders)
