[tool.poetry]
name = "pdvs-v3d"
version = "0.1.0"
description = "Processing of visual 3d output for later statistical analysis"
authors = ["Mac Prible <prible@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
polars = "^0.20.13"
pyarrow = "^15.0.0"
plotnine = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
